<resources>
    <string name="app_name">Capstone</string>
    <string name="username"> Name User </string>
    <string name="username2" > username </string>
    <string name="stat" > Statistik Anda </string>
    <string name="statDetail" > Anda Telah Mengumpulkan Sampah Daur Ulang Sebanyak </string>
    <string name="recycle"> Apa Itu Recycle ? </string>
    <string name="recycleDesc"> Mengelola kembali limbah tidak terpakai menjadi barang yang dapat digunakan kembali </string>
    <string name="reduce"> Apa Itu Reduce ? </string>
    <string name="reduceDesc"> Mengurangi limbah yang dihasilkan dalam kegiatan sehari-hari  </string>
    <string name="reuse" > Apa Itu Reuse ? </string>
    <string name="reuseDesc" > Menggunakan kembali peralatan yang dapat digunakan kembali agar tidak menghasilkan limbah </string>
    <string name="pupuk">Pupuk Kompos</string>
    <string name="pupukDesc"> Mengelola limbah organik seperti sisa makanan dan bahan dapur agar menjadi pupuk kompos untuk digunakan ke tanaman </string>
    <string name="plastik">Daur Ulang Sampah Plastik </string>
    <string name="plastikDesc"> Memisahkan antara sampah organik dengan sampah plastik dan mengumpulkannya untuk didaur ulang </string>
    <string name="mandi"> Peralatan Mandi </string>
    <string name="mandiDesc">Salah satu limbah yang bisa dikurangi adalah limbah dari peralatan mandi, gunakan sabun, sampo, dan air secukupnya  </string>
    <string name="organik"> Bahan Organik</string>
    <string name="organikDesc"> Bahan organik berasal dari hewan atau tumbuhan, hal yang meliputinya adalah sisa makanan dan limbah dapur </string>
    <string name="botol" > Botol Minum </string>
    <string name="botolDesc" >Menggunakan botol minum dan mengisi ulang kembali daripada membeli air minum kemasan dapat mengurangi limbah plastik </string>
    <string name="alat" > Alat Makan </string>
    <string name="alatDesc" >Menggunakan alat makan reusable terutama ketika memesan take-away dapat mengurangi limbah alat makan sekali pakai  </string>
    <string name="partisipasi">Mari Berpartisipasi</string>
    <string name="email">Email</string>
    <string name="et_email_error_message">Email address is not valid!</string>
    <string name="password">Password</string>
    <string name="et_password_error_message">Password must be at least 8 character</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="register">Register</string>
    <string name="login_account">Login Account</string>
    <string name="register_account">Register Account</string>
    <string name="register_message">Please fill this form</string>
    <string name="full_name">Full name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_success_message">Login Successful</string>
    <string name="login_error_message">Can\'t Login</string>
    <string name="registration_success">Registration Successful</string>
    <string name="registration_error_message">Can\'t Regist Your Account</string>
    <string name="et_email_empty">E-mail is required</string>
    <string name="et_fullname_empty">Full Name is required</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_success">Berhasil terkirim</string>
    <string name="send_error">Gagal terkirim</string>
    <string name="selamat_datang_di_aplikasi_t_bank">Selamat datang di aplikasi T-Bank</string>
    <string-array name="kategori_sampah">
        <item>Plastik</item>
        <item>Logam</item>
        <item>Kertas</item>
        <item>Karet</item>
    </string-array>
    <string-array name="harga_perkilo">
        <item>1500</item>
        <item>3000</item>
        <item>800</item>
        <item>1000</item>
    </string-array>

</resources>