<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".article.RecycleActivity">

    <View
        android:id="@+id/upperBackground"
        android:layout_width="412dp"
        android:layout_height="398dp"
        android:background="@drawable/upperbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="295dp"
        android:layout_marginTop="-8dp"
        android:src="@drawable/rectangle3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRecycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/recycle"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/recycleDesc"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecycle" />


    <ImageView
        android:id="@+id/ivPupuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/image9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upperBackground" />

    <TextView
        android:id="@+id/tvPupuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/pupuk"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivPupuk"
        app:layout_constraintTop_toBottomOf="@+id/upperBackground" />

    <TextView
        android:id="@+id/tvPupukDesc"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/pupukDesc"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/ivPupuk"
        app:layout_constraintStart_toEndOf="@+id/ivPupuk"
        app:layout_constraintTop_toBottomOf="@+id/tvPupuk" />

    <ImageView
        android:id="@+id/ivPlastik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/image12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPupuk" />

    <TextView
        android:id="@+id/tvPlastik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/plastik"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivPlastik"
        app:layout_constraintTop_toTopOf="@+id/ivPlastik" />

    <TextView
        android:id="@+id/tvPLastikDesc"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/pupukDesc"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/ivPlastik"
        app:layout_constraintStart_toEndOf="@+id/ivPlastik"
        app:layout_constraintTop_toBottomOf="@+id/tvPlastik" />

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="72dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/orange"
        android:src="@drawable/ic_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="72dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/orange"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>